--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smart-sac",
   "version": "1.0.0",
   "description": "software engineering project",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +13,9 @@
     "center"
   ],
   "author": "Aviral Awasthi",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
+  }
 }
