--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
-PORT= 8000
-MONGODB_URL =mongodb+srv://aviralawsthi:kuchthobadhiya@cluster0.4gjnhns.mongodb.net
+PORT=8000
+MONGODB_URL =mongodb+srv://aviralawsthi:QQ4YJ07KgNqnbhKz@smart-sac.xdxltsr.mongodb.net
 CorsOrigin =*
-ACCESS_TOKEN_SECRET =1234
+ACCESS_TOKEN_SECRET =1234ghgjkhbgkjhlijjhg
 ACCESS_TOKEN_EXPIRY =1d
 REFRESH_TOKEN_SECRET =asdfhgh
 REFRESH_TOKEN_EXPIRY =10d
+ADMIN_PASSWORD =2F31412412
 
-CLOUDINARY_CLOUD_NAME =dw4dr0pib
-CLOUDINARY_API_KEY =249533587479993
-CLOUDINARY_API_SECRET=VI5uaIicbkeInXFWYVXXayOghx8
-
+FRONTEND_URL=http://localhost:3000
+EMAIL_USER=aviralawasthi72@gmail.com
+EMAIL_PASS=idjlkxnwdfovbkwl
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
